<resources>
    <string name="app_name">INK Tattoo</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="email">E-mail</string>
    <string name="password_again">Password Again</string>
    <string name="phone">Phone</string>
    <string name="phone_types">Phone Types</string>
    <string name="cancel">Cancel</string>
    <string name="login_as_guest">login As Guest</string>
    <string name="item_placeholder">2000.01.01.</string>
    <string name="item_info_placeholder">8:00</string>
    <string name="make_an_appointment">Make an appointment</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="appointment">Appointment</string>
    <string name="view_selector">View Selector</string>
    <string name="reserve_appointment">Reserve Appointment</string>
    <string name="delete_appointment">Delete Appointment</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="delete_profile">delete profile</string>
    <string name="edit">Edit</string>
    <string name="save">save changes</string>
    <string-array name="phone_type">
        <item>Landline</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>