<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/item_placeholder"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/time"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:padding="8dp"
            android:text="@string/item_info_placeholder" />

        <Button
            android:id="@+id/makeAppointment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/time"
            android:layout_centerHorizontal="true"
            android:text="@string/make_an_appointment" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>