<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".RegistrationActivity">


    <TextView
        android:id="@+id/regText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <EditText
        android:id="@+id/RegUserName"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regText"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegUserName"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regEmail"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/regPassword_Again"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword"
        app:layout_constraintVertical_bias="0.052" />

    <EditText
        android:id="@+id/regPhone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPassword_Again"
        app:layout_constraintVertical_bias="0.052" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/regPhone">


        <Button
            android:id="@+id/regButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="registration"
            android:text="@string/registration" />

        <Button
            android:id="@+id/canButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_weight="1"
            android:onClick="cancel"
            android:text="@string/cancel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>