<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/item_placeholder"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/time"
            style="@style/ItemDetailText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/date"
            android:layout_centerHorizontal="true"
            android:padding="8dp"
            android:text="@string/item_info_placeholder" />

        <LinearLayout
            android:id="@+id/linearLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/time">


            <Button
                android:id="@+id/reserveAppointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:text="@string/reserve_appointment" />

            <Button
                android:id="@+id/deleteAppointment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:backgroundTint="@color/jungle_green"
                android:textColor="@color/white"
                android:text="@string/delete_appointment" />

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>